--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 .DS_Store
 node_modules/
 npm-debug.log
+data1.csv
+data2.csv
+data3.csv
+data4.csv
+data5.csv
+data6.csv
+data7.csv
+data8.csv
+data9.csv
+data10.csv
