--- a/test/artillery/artillery.yml
+++ b/test/artillery/artillery.yml
@@ -1,6 +1,6 @@
 config:
   target: 'http://localhost:1337'
-  processor: "./my-functions.js"
+  processor: "./artillery.generate.data.js"
   phases:
   
     # - duration: 30
