--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./src/server/index.js",
-    "test": "./node_modules/mocha/bin/_mocha"
+    "test": "nyc mocha"
   },
   "keywords": [],
   "author": "Matt Upham",
@@ -12,10 +12,13 @@
   "devDependencies": {
     "chai": "4.1.1",
     "chai-http": "^3.0.0",
-    "mocha": "3.5.0"
+    "mocha": "3.5.0",
+    "nyc": "^11.4.1",
+    "phantomjs": "^2.1.7"
   },
   "dependencies": {
     "aws-sdk": "^2.190.0",
+    "cron": "^1.3.0",
     "faker": "^4.1.0",
     "knex": "^0.13.0",
     "koa": "^2.3.0",
