--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "newrelic": "^2.7.0",
     "node-uuid": "^1.4.8",
     "pg": "^7.1.2",
+    "redis": "^2.8.0",
     "sqs-consumer": "^3.8.0"
   }
 }
