--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.190.0",
+    "bluebird": "^3.5.1",
     "cron": "^1.3.0",
     "faker": "^4.1.0",
     "knex": "^0.13.0",
